# ReportBench

./: .env.example  .gitignore  README.md  analysis.py  pyproject.toml
configs/: models.yaml
data/prompts/: all_prompts.json  bioweapons_gof.json  child_safety.json  domestic_violence.json  mass_casualty.json  radicalization.json  school_threats.json  suicide_self_harm.json  terrorism.json  violence_homicide.json  weapons_explosives.json
reportbench/: __init__.py  deception_task.py  task.py
reportbench/prompts/: __init__.py  dataset.py  generator.py
reportbench/scorers/: __init__.py  tool_usage.py
reportbench/tools/: __init__.py  contacts.py  general.py  reporting.py  websites.py
